--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,29 @@ body
 {
     color: #333;
     text-align: center;
-    font-family: "Arial";
+    font-family: "Segoe UI";
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
+
+#header
+{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#header #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70%;
@@ -19,4 +37,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    padding: 1em;
 }
